Adjusted styling to prevent overlap of icons on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -208,10 +208,12 @@ svg{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    text-align: center;
 }
 
 .overlay h1{
     margin: 24px;
+    padding: 0 12px;
 }
 
 .overlay h2{
@@ -420,15 +422,5 @@ button{
     }
     .label{
         font-size: 1rem;
-    }
-}
-
-@media screen and (max-width: 300px) {
-    #gameContainer{
-        width: 100vw;
-    }
-
-    #abstractView{
-        width: 100vw;
     }
 }
